--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-storages==1.9.1
 django-compressor==2.4
 django-anymail==7.0.0
 django-filter==2.2.0
+django-modelcluster==5.1
 logdna==1.5.3
 whitenoise==5.0.1
 django-redis==4.11.0
