--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ python-docx==0.8.10
 boto3==1.12.5
 elasticsearch==2.4.1
 redis==3.4.1
+wagtail-autocomplete==0.6
 
 # Production packages
 newrelic==5.6.0.135
