--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,8 @@ elasticsearch==2.4.1
 redis==3.4.1
 #See https://github.com/wagtail/wagtail-autocomplete
 wagtail-autocomplete==0.6
+#See https://pypi.org/project/django-multiselectfield/
+django-multiselectfield==0.1.12
 # Production packages
 newrelic==5.6.0.135
 gunicorn==20.0.4
