--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,7 @@ sentry-sdk==0.14.1
 # Development packages
 Faker==4.0.1
 
-# Migration related packages
+# Migration related packages. Can be removed after HigherEd migration
 gspread==3.6.0
 oauth2client==4.1.3
 google-api-python-client==1.12.8
