--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,10 @@ python-docx==0.8.10
 boto3==1.12.5
 elasticsearch==2.4.1
 redis==3.4.1
-
+#See https://github.com/wagtail/wagtail-autocomplete
+wagtail-autocomplete==0.6
+#See https://pypi.org/project/django-multiselectfield/
+django-multiselectfield==0.1.12
 # Production packages
 newrelic==5.6.0.135
 gunicorn==20.0.4
@@ -32,3 +35,8 @@ sentry-sdk==0.14.1
 
 # Development packages
 Faker==4.0.1
+
+# Migration related packages. Can be removed after HigherEd migration
+gspread==3.6.0
+oauth2client==4.1.3
+google-api-python-client==1.12.8
