--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ django-multiselectfield==0.1.12
 newrelic==5.6.0.135
 gunicorn==20.0.4
 sentry-sdk==0.14.1
+wagtail-headless-preview==0.1.4
 
 # Development packages
 Faker==4.0.1
