--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,8 +32,8 @@ services:
       POSTGRES_DB: wagtail
       POSTGRES_PASSWORD: test
     restart: always
-    expose:
-      - "5432"
+    ports:
+      - "5432:5432"
   es:
     image: docker.elastic.co/elasticsearch/elasticsearch:5.6.16
     environment:
