Mount the user's ~/.netrc file on the web container
This is something heroku uses for authentication.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,9 @@ services:
       - 'entrypoint.sh'
     volumes:
       - ./:/app
+      - type: bind
+        source: ${HOME}/.netrc
+        target: /home/wagtail/.netrc
     ports:
       - "8000:8000"
     environment:
