--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ logdna==1.16.0
 whitenoise==5.2.0
 django-redis==4.12.1
 django-basic-auth-ip-whitelist==0.3.4
+django-csp==3.7
 
 # Other packages
 Wand==0.5.9
