--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,3 +55,10 @@ services:
     command: redis-server
     expose:
      - "6379"
+
+  node:
+    image: node:10.15.1-alpine
+    volumes:
+      - ./:/app
+    working_dir: /app
+    command: /bin/ash -c "npm install && npm run dev"
