Reorganize docker files
Here I'm making a subdirectory for docker stuff so it does not
overwhelm the project root.

1. Moved the Dockerfile into the docker directory

2. Separated the entrypoint from the django start script (this is so
that we can re-use this entrypoint for other services).

3. Removed the unneeded DATABASE_URL arg (we were redundantly
assigning it to an environment variable when it already is that).

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,14 +3,11 @@ services:
   web:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: ./docker/Dockerfile
       args:
-        DATABASE_URL: postgres://wagtail:test@db:5432/wagtail
         USERID: ${UID:?err}
     command:
-      - /bin/sh
-      - '-c'
-      - 'entrypoint.sh'
+      - django-start.sh
     volumes:
       - ./:/app
       - type: bind
