--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -35,7 +35,7 @@ jobs:
         with:
           node-version: 10
       - name: Install Python Dependencies
-        run: pip install -r requirements.txt
+        run: pip install -r requirements/ci.txt
       - name: Install Node Dependencies
         run: npm ci
       - name: Verify Elasticsearch connection from host
