--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,11 +38,11 @@ dependencies = [
     'django-multiselectfield >= 0.1.12',
     'gunicorn == 20.0.4',
     'wagtail-headless-preview == 0.1.4',
+    'logdna >= 1.18, < 2',  # TODO: Consider removing this entirely
 ]
 
 [project.optional-dependencies]
 prod = [
-    'logdna >= 1.18, < 2',
     'newrelic == 6.4.3.160',  # is this being used?
     'sentry-sdk >= 1.19.1',
 ]
