Ensure current requirements present when re-building
The way pip-compile works is it bases new builds off of an existing
one, so it doesn't upgrade anything unless explicitly asked to.  This,
however, requires that the actual compilation output be present to
compare to, so we ensure it is when running that compilation command.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -11,6 +11,9 @@ FROM python-base AS builder
 RUN pip install -U pip pip-tools wheel
 COPY pyproject.toml ./
 COPY docker/pip-compile.sh /usr/local/bin
+COPY ./requirements/local-dev.txt ./
+COPY ./requirements/prod.txt ./
+COPY ./requirements/ci.txt ./
 RUN pip-compile.sh
 
 # This build target extracts the requirements.txt files from the
