--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,8 @@ classifiers = ["Private :: Do Not Upload"]
 version = "0"
 dependencies = [
     # Django related
-    'Django==3.2.6',
-    'Wagtail >= 2.15, < 2.16',
+    'Django >= 3.2.6, < 4',
+    'Wagtail >= 2.16, < 3',
     'Celery >= 4.4, < 5.0',
     'dj-database-url >= 1.3.0, < 2',
     'django-cors-headers >= 3.13.0, < 4',
