--- a/package.json
+++ b/package.json
@@ -87,16 +87,16 @@
     "jest-fetch-mock": "^1.6.5",
     "jquery": "^3.6.4",
     "mini-css-extract-plugin": "^0.5.0",
-    "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss": "^7.0.39",
     "react-test-renderer": "^16.4.2",
     "redux-mock-store": "^1.5.3",
-    "sass-loader": "^7.1.0",
+    "sass": "^1.60.0",
+    "sass-loader": "^9.0.3",
     "sass-resources-loader": "^1.3.3",
     "terser-webpack-plugin": "^1.2.2",
     "watch": "^1.0.2",
-    "webpack": "^4.6.0",
+    "webpack": "^4.36.0",
     "webpack-bundle-analyzer": "^3.9.0",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14"
