--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "index.js",
   "scripts": {
     "start": "source .env && source venv/bin/activate && ./manage.py runserver",
-    "start:lite": "webpack-dev-server --config ./webpack.config.lite.js --mode development",
     "build": "NODE_ENV=development webpack",
     "dev": "NODE_ENV=development webpack --watch",
     "dev:minimal": "NODE_ENV=development webpack --watch --display=errors-only",
@@ -78,7 +77,7 @@
     "eslint-plugin-babel": "^3.2.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^4.5.2",
     "jest": "^23.4.2",
     "jest-fetch-mock": "^1.6.5",
     "jquery": "^3.6.4",
@@ -90,11 +89,10 @@
     "sass": "^1.60.0",
     "sass-loader": "^9.0.3",
     "sass-resources-loader": "^1.3.3",
-    "terser-webpack-plugin": "^1.2.2",
+    "terser-webpack-plugin": "^4.2.3",
     "watch": "^1.0.2",
     "webpack": "^4.36.0",
-    "webpack-bundle-analyzer": "^3.9.0",
-    "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.1.14"
+    "webpack-bundle-analyzer": "^4.8.0",
+    "webpack-cli": "^4.10.0"
   }
 }
