--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "date-fns": "^2.0.0-alpha.27",
     "dom-to-image": "^2.6.0",
     "history": "^4.7.2",
+    "jest-environment-jsdom": "^29.5.0",
     "moment": "^2.29.4",
     "os": "^0.1.1",
     "prop-types": "^15.8.1",
@@ -61,13 +62,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.3.3",
-    "@babel/plugin-proposal-class-properties": "^7.3.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.21.5",
+    "@babel/preset-react": "^7.18.6",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "23.4.2",
+    "babel-jest": "^29.5.0",
     "babel-loader": "^9.1.2",
     "core-js": "^2.6.5",
     "css-loader": "^6.7.3",
@@ -79,7 +80,7 @@
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "html-webpack-plugin": "^4.5.2",
-    "jest": "^23.4.2",
+    "jest": "^29.5.0",
     "jest-fetch-mock": "^1.6.5",
     "jquery": "^3.6.4",
     "mini-css-extract-plugin": "^1.6.2",
