--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,4 +51,14 @@ test = [
 
 dev = [
     'fabric >= 2.6.0, < 3',
+    'ruff',
+    'black',
 ]
+
+[tool.black]
+target-version = ['py310']
+line-length = 88
+
+[tool.ruff]
+select = ['E', 'F', 'I']
+ignore = ['E501']
