--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -20,7 +20,7 @@ jobs:
         ports:
         - 5432:5432
       elasticsearch:
-        image: elasticsearch:7.17.13
+        image: docker.elastic.co/elasticsearch/elasticsearch:7.10.2
         options: -e="bootstrap.memory_lock=false" -e="ES_JAVA_OPTS=-Xms1500m -Xmx1500m" -e="discovery.type=single-node" -e="xpack.security.enabled=false" --health-cmd="curl http://localhost:9200/_cluster/health" --health-interval=10s --health-timeout=5s --health-retries=10
         ports:
           - 9200/tcp
