--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,8 @@ report/utils/test.docx
 links.py
 
 .vscode
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
