--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-amqp==2.6.1
+amqp==5.2.0
     # via kombu
 anyascii==0.3.2
     # via wagtail
@@ -6,7 +6,7 @@ asgiref==3.6.0
     # via django
 beautifulsoup4==4.9.3
     # via wagtail
-billiard==3.6.4.0
+billiard==4.2.0
     # via celery
 boto3==1.26.114
     # via newamerica-cms (pyproject.toml)
@@ -20,7 +20,7 @@ cairocffi==1.5.0
     #   weasyprint
 cairosvg==2.7.0
     # via weasyprint
-celery==4.4.7
+celery==5.4.0
     # via newamerica-cms (pyproject.toml)
 certifi==2022.12.7
     # via
@@ -32,6 +32,18 @@ cffi==1.15.1
     #   weasyprint
 charset-normalizer==3.1.0
     # via requests
+click==8.1.7
+    # via
+    #   celery
+    #   click-didyoumean
+    #   click-plugins
+    #   click-repl
+click-didyoumean==0.3.1
+    # via celery
+click-plugins==1.1.1
+    # via celery
+click-repl==0.3.0
+    # via celery
 createsend==7.0.0
     # via newamerica-cms (pyproject.toml)
 cssselect2==0.7.0
@@ -117,7 +129,7 @@ jmespath==1.0.1
     # via
     #   boto3
     #   botocore
-kombu==4.6.11
+kombu==5.3.7
     # via celery
 l18n==2021.3
     # via wagtail
@@ -132,6 +144,8 @@ pillow==9.5.0
     #   wagtail
 pillow-heif==0.14.0
     # via willow
+prompt-toolkit==3.0.43
+    # via click-repl
 psycopg2==2.9.6
     # via newamerica-cms (pyproject.toml)
 pycparser==2.21
@@ -139,12 +153,13 @@ pycparser==2.21
 pyphen==0.14.0
     # via weasyprint
 python-dateutil==2.8.2
-    # via botocore
+    # via
+    #   botocore
+    #   celery
 python-docx==0.8.11
     # via newamerica-cms (pyproject.toml)
 pytz==2023.3
     # via
-    #   celery
     #   django
     #   django-modelcluster
     #   djangorestframework
@@ -184,16 +199,19 @@ tinycss2==1.2.1
     #   weasyprint
 typing-extensions==4.5.0
     # via dj-database-url
+tzdata==2024.1
+    # via celery
 urllib3==1.26.15
     # via
     #   botocore
     #   elasticsearch
     #   requests
     #   sentry-sdk
-vine==1.3.0
+vine==5.1.0
     # via
     #   amqp
     #   celery
+    #   kombu
 wagtail==5.2.2
     # via
     #   newamerica-cms (pyproject.toml)
@@ -205,6 +223,8 @@ wagtail-headless-preview==0.7.0
     # via newamerica-cms (pyproject.toml)
 wand==0.6.11
     # via newamerica-cms (pyproject.toml)
+wcwidth==0.2.13
+    # via prompt-toolkit
 weasyprint==51
     # via newamerica-cms (pyproject.toml)
 webencodings==0.5.1
@@ -215,7 +235,9 @@ webencodings==0.5.1
 whitenoise==6.4.0
     # via newamerica-cms (pyproject.toml)
 willow[heif]==1.6.2
-    # via wagtail
+    # via
+    #   wagtail
+    #   willow
 
 # The following packages are considered to be unsafe in a requirements file:
 setuptools==67.6.1
