--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,18 +8,18 @@ classifiers = ["Private :: Do Not Upload"]
 version = "0"
 dependencies = [
     # Django related
-    'Django >= 3.2.6, < 4',
+    'Django >= 4.2.13, < 5',
     'Wagtail >= 5.2.2, < 5.3',
     'Celery >= 4.4, < 5.0',
     'dj-database-url >= 1.3.0, < 2',
-    'django-cors-headers >= 3.13.0, < 4',
-    'django-storages >= 1.13, < 2',
-    'django-compressor >= 3.0',
-    'django-anymail >= 9.0, < 10',
+    'django-cors-headers >= 4.3.1, < 5',
+    'django-storages >= 1.14.2, < 2',
+    'django-compressor >= 4.0',
+    'django-anymail >= 10.2, < 11',
     'django-filter',
-    'django-modelcluster',
-    'whitenoise >= 6.4, <7',
-    'django-redis >= 5.2, <6',
+    'django-modelcluster >= 6.2.1',
+    'whitenoise >= 6.6.0, < 7',
+    'django-redis >= 5.4, < 6',
     'django-basic-auth-ip-whitelist >= 0.5',
     'django-csp >= 3.7, <4',
 
@@ -33,7 +33,7 @@ dependencies = [
     'elasticsearch >= 5.5, <6',
     'redis >= 3.4.1, < 4',
     # See https://github.com/wagtail/wagtail-autocomplete
-    'wagtail-autocomplete >= 0.10.0',
+    'wagtail-autocomplete >= 0.11.0',
     # See https://pypi.org/project/django-multiselectfield/
     'django-multiselectfield >= 0.1.12',
     'gunicorn == 20.0.4',
