--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.21.5",
     "@babel/preset-react": "^7.18.6",
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^29.5.0",
     "babel-loader": "^9.1.2",
@@ -78,7 +79,6 @@
     "d3": "^5.0.0",
     "eslint": "^4.18.2",
     "eslint-plugin-babel": "^3.2.0",
-    "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "html-webpack-plugin": "^5.5.1",
     "jest": "^29.5.0",
