--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -34,6 +34,8 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 18
+      - name: Install Specific Pip Version
+        run: pip install pip==24.0
       - name: Install Python Dependencies
         run: pip install -r requirements/ci.txt
       - name: Install Node Dependencies
